[Australis] Bug 916953: introduce separator in overflow panel buttons and bookmark star button gets different label when inside overflow panel. r=Gijs
UltraBlame original commit: 767ee9d0f0c13709803ecf9c2d17c8fa68f1845c

--- a/browser/themes/linux/customizableui/panelUIOverlay.css
+++ b/browser/themes/linux/customizableui/panelUIOverlay.css
@@ -104,3 +104,61 @@ rule
 *
 /
 }
+.
+widget
+-
+overflow
+-
+list
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+{
+-
+moz
+-
+appearance
+:
+none
+;
+border
+:
+0
+;
+}
+.
+widget
+-
+overflow
+-
+list
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
+-
+moz
+-
+margin
+-
+start
+:
+0
+;
+}
