--- a/browser/themes/osx/customizableui/panelUIOverlay.css
+++ b/browser/themes/osx/customizableui/panelUIOverlay.css
@@ -463,3 +463,31 @@ end
 0
 ;
 }
+.
+widget
+-
+overflow
+-
+list
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
+-
+moz
+-
+margin
+-
+start
+:
+4px
+;
+}
