--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -4116,6 +4116,138 @@ height
 28px
 ;
 }
+.
+widget
+-
+overflow
+-
+list
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+:
+:
+after
+{
+content
+:
+"
+"
+;
+display
+:
+-
+moz
+-
+box
+;
+width
+:
+1px
+;
+height
+:
+18px
+;
+-
+moz
+-
+margin
+-
+end
+:
+-
+1px
+;
+background
+-
+image
+:
+linear
+-
+gradient
+(
+hsla
+(
+210
+54
+%
+20
+%
+.
+2
+)
+0
+hsla
+(
+210
+54
+%
+20
+%
+.
+2
+)
+18px
+)
+;
+background
+-
+clip
+:
+padding
+-
+box
+;
+background
+-
+position
+:
+center
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+size
+:
+1px
+18px
+;
+box
+-
+shadow
+:
+0
+0
+0
+1px
+hsla
+(
+0
+0
+%
+100
+%
+.
+2
+)
+;
+}
 #
 PanelUI
 -
